Update HelloWorldScala build script